# HFile

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-nob.sh  build.sh  client.c  client.h  install.ps1  install.sh  main.c  nob.c  run.sh  server.c  server.h  test.sh  utils.c  utils.h
.github/workflows/: c-cpp.yml  release.yml
docs/: index.html  install.ps1  install.sh
src/: app_service.c  app_service.h  cli.c  cli.h  client.c  client.h  control.c  control.h  control_ui.c  control_ui.h  daemon_state.c  daemon_state.h  discovery.c  discovery.h  fs.c  fs.h  helper.c  helper.h  hfile.c  http.c  http.h  main.c  message_store.c  message_store.h  mobile_ui.c  mobile_ui.h  net.c  net.h  node.c  node.h  node_conn_tracker.c  node_conn_tracker.h  protocol.c  protocol.h  qr.c  qr.h  save.c  save.h  server.c  server.h  (+8 more)
test/: README.md  __init__.py  perf_transfer.py  run.sh  test.py  test_cli.py  test_hf.py  test_hfile.py  test_http.py  test_support.py  test_transfer.py  util_hf.py
test/HFileTest_IN/: hello.txt
test/fixtures/: text_basic_ascii.txt  text_utf8_cn.txt
test/fixtures/transfer/: text_basic_ascii.txt  text_utf8_cn.txt
test/support/: hf.py
